AdminUI/LearningHub.Nhs.AdminUI/wwwroot/css/mkplayer-ui.css
/* ... */
    .bmpui-ui-buffering-overlay, .bmpui-ui-cast-status-overlay, .bmpui-ui-container, .bmpui-ui-controlbar, .bmpui-ui-errormessage-overlay, .bmpui-ui-listbox, .bmpui-ui-playbacktoggle-overlay, .bmpui-ui-recommendation-overlay, .bmpui-ui-seekbar-label, .bmpui-ui-settings-panel, .bmpui-ui-subtitle-overlay.bmpui-fontsize-100 .bmpui-ui-subtitle-label, .bmpui-ui-titlebar, .bmpui-ui-uicontainer, .bmpui-ui-uicontainer .bmpui-ui-subtitle-overlay, .bmpui-ui-volumecontrolbutton {
        font-size: 1em
    }

.bmpui-ui-uicontainer {
    height: 100%;
    left: 0;
    margin: 0;
    overflow: hidden;
    pointer-events: none;
    position: absolute;
    top: 0;
    width: 100%
}

    .bmpui-ui-uicontainer * {
        pointer-events: auto
    }

    .bmpui-hidden.bmpui-ui-airplaytogglebutton, .bmpui-hidden.bmpui-ui-audiotracksettingstogglebutton, .bmpui-hidden.bmpui-ui-button, .bmpui-hidden.bmpui-ui-casttogglebutton, .bmpui-hidden.bmpui-ui-clickoverlay, .bmpui-hidden.bmpui-ui-closebutton, .bmpui-hidden.bmpui-ui-fullscreentogglebutton, .bmpui-hidden.bmpui-ui-hugeplaybacktogglebutton, .bmpui-hidden.bmpui-ui-hugereplaybutton, .bmpui-hidden.bmpui-ui-label, .bmpui-hidden.bmpui-ui-piptogglebutton, .bmpui-hidden.bmpui-ui-playbacktimelabel, .bmpui-hidden.bmpui-ui-playbacktogglebutton, .bmpui-hidden.bmpui-ui-replaybutton, .bmpui-hidden.bmpui-ui-seekbar, .bmpui-hidden.bmpui-ui-settingspanelpagebackbutton, .bmpui-hidden.bmpui-ui-settingspanelpageopenbutton, .bmpui-hidden.bmpui-ui-settingstogglebutton, .bmpui-hidden.bmpui-ui-subtitlesettingsresetbutton, .bmpui-hidden.bmpui-ui-subtitlesettingstogglebutton, .bmpui-hidden.bmpui-ui-volumeslider, .bmpui-hidden.bmpui-ui-volumetogglebutton, .bmpui-hidden.bmpui-ui-vrtogglebutton, .bmpui-hidden.bmpui-ui-watermark, .bmpui-no-flexbox .bmpui-ui-controlbar .bmpui-controlbar-bottom > .bmpui-container-wrapper > .bmpui-hidden, .bmpui-no-flexbox .bmpui-ui-controlbar .bmpui-controlbar-top > .bmpui-container-wrapper > .bmpui-hidden, .bmpui-ui-buffering-overlay.bmpui-hidden .bmpui-ui-buffering-overlay-indicator, .bmpui-ui-errormessage-overlay.bmpui-hidden, .bmpui-ui-listbox .bmpui-hidden.bmpui-ui-listbox-button, .bmpui-ui-settings-panel-page, .bmpui-ui-settings-panel-page .bmpui-ui-settings-panel-item.bmpui-hidden, .bmpui-ui-skin-ads .bmpui-ui-ads-status .bmpui-hidden.bmpui-ui-button-ad-skip, .bmpui-ui-skin-ads .bmpui-ui-ads-status .bmpui-hidden.bmpui-ui-label-ad-message, .bmpui-ui-skin-ads.bmpui-player-state-playing .bmpui-ui-playbacktoggle-overlay, .bmpui-ui-skin-cast-receiver.bmpui-ui-uicontainer .bmpui-ui-buffering-overlay-indicator, .bmpui-ui-skin-smallscreen .bmpui-ui-watermark, .bmpui-ui-skin-smallscreen.bmpui-no-flexbox .bmpui-ui-titlebar > .bmpui-container-wrapper > .bmpui-hidden, .bmpui-ui-uicontainer .bmpui-ui-subtitle-overlay.bmpui-hidden, .bmpui-ui-uicontainer.bmpui-hidden, .bmpui-ui-uicontainer.bmpui-layout-max-width-400 .bmpui-ui-titlebar .bmpui-label-metadata-description, .bmpui-ui-uicontainer.bmpui-player-state-finished .bmpui-ui-controlbar, .bmpui-ui-uicontainer.bmpui-player-state-finished .bmpui-ui-hugeplaybacktogglebutton, .bmpui-ui-uicontainer.bmpui-player-state-idle .bmpui-ui-controlbar, .bmpui-ui-uicontainer.bmpui-player-state-idle .bmpui-ui-hugeplaybacktogglebutton, .bmpui-ui-uicontainer.bmpui-player-state-idle .bmpui-ui-titlebar, .bmpui-ui-volumeslider .bmpui-seekbar .bmpui-seekbar-bufferlevel {
        display: none
    }

    .bmpui-ui-uicontainer.bmpui-player-state-playing.bmpui-controls-hidden * {
        cursor: none
    }

    .bmpui-ui-uicontainer.bmpui-controls-shown .bmpui-ui-hugeplaybacktogglebutton:focus {
        -webkit-box-shadow: inset -4px -3px 2px 9px #1b7fcc;
        box-shadow: inset -4px -3px 2px 9px #1b7fcc
    }

        .bmpui-ui-uicontainer.bmpui-controls-shown .bmpui-ui-hugeplaybacktogglebutton:focus:not(.bmpui-focus-visible) {
            -webkit-box-shadow: none;
            box-shadow: none
        }

    .bmpui-ui-uicontainer.bmpui-no-flexbox {
        background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=")
    }

        .bmpui-ui-uicontainer.bmpui-no-flexbox.bmpui-fullscreen {
            left: 0;
            position: fixed;
            top: 0;
            z-index: 999999
        }

.bmpui-ui-controlbar {
    background: -webkit-gradient(linear,left top,left bottom,from(transparent),to(rgba(0,0,0,.7)));
    background: linear-gradient(180deg,transparent,rgba(0,0,0,.7));
    bottom: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    line-height: 1em;
    opacity: 1;
    padding: 1em 1em .5em;
    position: absolute;
    -webkit-transition: opacity .3s,visibility;
    transition: opacity .3s,visibility;
    width: 100%
}

    .bmpui-ui-controlbar.bmpui-hidden, .bmpui-ui-titlebar.bmpui-hidden {
        opacity: 0;
        -webkit-transition: opacity .3s;
        transition: opacity .3s
    }

    .bmpui-ui-controlbar .bmpui-controlbar-bottom > .bmpui-container-wrapper, .bmpui-ui-controlbar .bmpui-controlbar-top > .bmpui-container-wrapper {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        margin: 1em 0
    }

    .bmpui-ui-controlbar .bmpui-controlbar-top .bmpui-ui-label {
        font-size: .9em
    }

    .bmpui-ui-controlbar .bmpui-controlbar-top > .bmpui-container-wrapper > *, .bmpui-ui-settings-panel > .bmpui-container-wrapper > * {
        margin: 0 .5em
    }

    .bmpui-ui-controlbar .bmpui-controlbar-bottom {
        white-space: nowrap
    }

        .bmpui-ui-controlbar .bmpui-controlbar-bottom > .bmpui-container-wrapper .bmpui-ui-volumeslider {
            margin: auto .5em;
            width: 5em
        }

.bmpui-no-flexbox .bmpui-ui-controlbar .bmpui-controlbar-bottom > .bmpui-container-wrapper, .bmpui-no-flexbox .bmpui-ui-controlbar .bmpui-controlbar-top > .bmpui-container-wrapper {
    border-spacing: .5em 0;
    display: table
}
/* ... */

